--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -16,6 +16,12 @@
   year={2009},
   publisher={Cambridge University Press}
 },
+@article{goldberg2014word2vec,
+  title={word2vec explained: Deriving mikolov et al.'s negative-sampling word-embedding method},
+  author={Goldberg, Yoav and Levy, Omer},
+  journal={arXiv preprint arXiv:1402.3722},
+  year={2014}
+},
 @inproceedings{maccartney2008phrase,
   title={A phrase-based alignment model for natural language inference},
   author={MacCartney, Bill and Galley, Michel and Manning, Christopher D},
