--- a/tex/basics.tex
+++ b/tex/basics.tex
@@ -4,11 +4,11 @@ This section gives an overview of the \ac{NLI}, thetask that is used within this
 \ac{NLI} \citep{bowman2015large} deals with the problem to identify, whether one piece of natural text, namely the \textit{hypothesis}, can be inferred from another piece of text, namely the \textit{premise}. The hypothesis, in the remainder of this thesis denoted as $h$, is said to be entailed by the premise, denoted as $p$, if a human reader would conclude, that $h$ is true, given the fact that the $p$ is true. This definition differes from strict logical inference in the following way: While in \ac{NLI} \textit{a high plausability} for the $p$ to imply the $h$, based on the human judgement, is sufficient, the strict logical inference strives to achieve \textit{certainity} \citep{dagan2009recognizing}. \ac{NLI} essentially breaks down to an alignment problem \citep{maccartney2008phrase}, shown in the following example. Given the sentence pair
 \begin{center}
 \begin{tabular}{rl}
-\textbf{Premise:} & Donald Trump is eating his cheeseburger in his bedroom. \\
-\textbf{Hypothesis:} & The president of the United States is snacking a cheeseburger in the White House. 
+\textbf{Premise:} & Donald Trump is having a conversation in his living room. \\
+\textbf{Hypothesis:} & The president of the United States is talking to people in the White House. 
 \end{tabular}
 \end{center}
-the model is required to correctly align ``Donald Trump'' with ``The president of the United States'', ``eating'' with ``snacking'' and have information, that his ``bedroom'' is within the ``White House''. Here it can be seen, how the system would not only need to cope with different ways of expressing the same meaning, due to the nature of language, but also is required to access and process factual information, that is commonly known to an average human. Following \cite{bowman2015large}, the sentence relation can be classified using one out of three labels, \textit{entailment}, \textit{neutral}, \textit{contradiction}. Examples, taken from the SNLI Leaderboard\footnote{\href{https://nlp.stanford.edu/projects/snli/}{https://nlp.stanford.edu/projects/snli/}}, for each label are shown in Table \ref{tab:label_examples}.
+the model is required to correctly align ``Donald Trump'' with ``The president of the United States'', ``having a conversation'' with ``talking to people'' and have information, that his ``bedroom'' is within the ``White House''. Here it can be seen, how the system would not only need to cope with different ways of expressing the same meaning, due to the nature of language, but also is required to access and process factual information, that is commonly known to an average human. Following \cite{bowman2015large}, the sentence relation can be classified using one out of three labels, \textit{entailment}, \textit{neutral}, \textit{contradiction}. Examples, taken from the SNLI Leaderboard\footnote{\href{https://nlp.stanford.edu/projects/snli/}{https://nlp.stanford.edu/projects/snli/}}, for each label are shown in Table \ref{tab:label_examples}.
 \begin{table}[tph!]
 \centering
 \begin{tabular}{lc}
